# xcs_stock_op

./: .gitignore  000002.XSHE.csv  600276.XSHG.csv  600547.XSHG.csv  CMakeLists.txt  README.md  account.cpp  account.hpp  account_test.cpp  action_base.hpp  binary_action.cpp  binary_action.hpp  binary_input.cpp  binary_input.hpp  condition.cpp  condition.hpp  config_magr2.cpp  config_magr2.hpp  confsys.stock  confsys.stock.2  environment_base.hpp  experiment_mgr.cpp  experiment_mgr.hpp  generic.cpp  generic.hpp  main.cpp  stock_account_info.txt  stock_env.cpp  stock_env.hpp  test_main.cpp  train_main.cpp  util.cpp  util.hpp  xcs_classifier.cpp  xcs_classifier.hpp  xcs_classifier_system.cpp  xcs_classifier_system.hpp  xcs_random.cpp  xcs_random.hpp
exdata/000001/: 000001.XSHE.csv  classifiers.txt  stock_account_info_test0.txt  stock_account_info_test1.txt  stock_account_info_test10.txt  stock_account_info_test11.txt  stock_account_info_test12.txt  stock_account_info_test13.txt  stock_account_info_test14.txt  stock_account_info_test15.txt  stock_account_info_test16.txt  stock_account_info_test17.txt  stock_account_info_test18.txt  stock_account_info_test19.txt  stock_account_info_test2.txt  stock_account_info_test3.txt  stock_account_info_test4.txt  stock_account_info_test5.txt  stock_account_info_test6.txt  stock_account_info_test7.txt  stock_account_info_test8.txt  stock_account_info_test9.txt  stock_account_info_train.txt
exdata/600082/: 600082.XSHG.csv  classifiers.txt  stock_account_info_test0.txt  stock_account_info_test1.txt  stock_account_info_test10.txt  stock_account_info_test11.txt  stock_account_info_test12.txt  stock_account_info_test13.txt  (+15 more)
(+23 files in other folders)
